rest-villains/k8s/kubernetes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 26e1bff939e8e94ff126d2f2cc871e0d9bf63daf
    app.quarkus.io/build-timestamp: 2023-03-31 - 03:04:02 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: 1.0.0
  name: rest-villains
  namespace: superheroes
spec:
  ingressClassName: nginx
  rules:
    - host: superheroes.com
      http:
        paths:
          - backend:
              service:
                name: rest-villains
                port:
                  number: 80
            path: /api/villains
            pathType: Prefix
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: rest-villains
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: villains-database
  namespace: superheroes
spec:
  replicas: 1
  selector:
    matchLabels:
      name: villains-database
  template:
    metadata:
      labels:
        name: villains-database
      namespace: superheroes
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                configMapKeyRef:
                  key: postgresql-user
                  name: villains-config
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: postgresql-password
                  name: villains-config
            - name: POSTGRESQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: postgresql-database
                  name: villains-config
          image: centos/postgresql-96-centos7
          imagePullPolicy: IfNotPresent
          name: villains-database
          ports:
            - containerPort: 5432
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: villains-database
  namespace: superheroes
spec:
  ports:
    - name: http
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: villains-database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 26e1bff939e8e94ff126d2f2cc871e0d9bf63daf
    app.quarkus.io/build-timestamp: 2023-03-31 - 03:04:02 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: 1.0.0
  name: rest-villains
  namespace: superheroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-villains
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 26e1bff939e8e94ff126d2f2cc871e0d9bf63daf
        app.quarkus.io/build-timestamp: 2023-03-31 - 03:04:02 +0000
      labels:
        app.kubernetes.io/name: rest-villains
        app.kubernetes.io/version: 1.0.0
      namespace: superheroes
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: jeremygilbert/rest-villains:1.0.0
          imagePullPolicy: Always
          name: rest-villains
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
      serviceAccountName: rest-villains
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 26e1bff939e8e94ff126d2f2cc871e0d9bf63daf
    app.quarkus.io/build-timestamp: 2023-03-31 - 03:04:02 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: 1.0.0
  name: rest-villains
  namespace: superheroes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
